--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,19 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-cli = { path = "cli", optional = true}
-gui = { path = "gui", optional = true }
-rand = "0.9.2"
+cli = { path = "cli", optional = true }
+rand = { version = "0.9.2", optional = true }
 serde = {version = "1.0.219", features = ["derive"]}
-serde_json = "1.0.140"
+serde_json = {version = "1.0.140"}
+
+#NB : pour le web, faut trouver un remplaçant à rand
+gui = { path = "gui", optional = true }
+wasm-bindgen = { version = "0.2.100", optional = true }
 
 [features]
 default = []
-cli = ["dep:cli"]
-web = ["gui/web"]
+cli = ["dep:cli", "rand"]
+web = ["gui/web", "wasm-bindgen"]
 desktop = ["gui/desktop"]
 
 [profile]
