--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,13 @@ serde_json = {version = "1.0.140"}
 
 #NB : pour le web, faut trouver un remplaçant à rand
 gui = { path = "gui", optional = true }
-wasm-bindgen = { version = "0.2.100", optional = true }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2.100"
 
 [features]
-default = []
 cli = ["dep:cli", "rand"]
-web = ["gui/web", "wasm-bindgen"]
+web = ["gui/web"]
 desktop = ["gui/desktop"]
 
 [profile]
