--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,6 @@ edition = "2024"
 
 [dependencies]
 cli = { path = "cli", optional = true }
-rand = { version = "0.9.2", optional = true }
-serde = {version = "1.0.219", features = ["derive"]}
-serde_json = {version = "1.0.140"}
-
 #NB : pour le web, faut trouver un remplaçant à rand
 gui = { path = "gui", optional = true }
 
@@ -16,7 +12,7 @@ gui = { path = "gui", optional = true }
 wasm-bindgen = "0.2.100"
 
 [features]
-cli = ["dep:cli", "rand"]
+cli = ["dep:cli"]
 web = ["gui/web"]
 desktop = ["gui/desktop"]
 
