--- a/cortex/Cargo.toml
+++ b/cortex/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2024"
 rand = "0.9.2"
 serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+getrandom = { version = "0.3", features = ["wasm_js"] }
