- rename core - update readme - add cli-prod

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -6,6 +6,7 @@ args = ["serve", "--platform", "web"]
 
 [tasks.desktop]
 description = "Lance l'interface desktop avec Dioxus"
+env = { WEBKIT_DISABLE_DMABUF_RENDERER="1" }
 command = "dx"
 args = ["serve", "--platform", "desktop"]
 
@@ -14,11 +15,17 @@ description = "Lance la CLI"
 command = "cargo"
 args = ["run", "--features", "cli"]
 
+[tasks.cli-prod]
+description = "Lance la CLI"
+command = "cargo"
+args = ["build", "--release", "--features", "cli"]
+
 [tasks.help]
 description = "Affiche cette aide"
 script = '''
 echo Commandes disponibles:
-echo  cargo make web     - Lance l'interface web
-echo  cargo make desktop - Lance l'interface desktop 
-echo  cargo make cli     - Lance l'interface CLI
+echo cargo make web     - Lance l'interface web
+echo cargo make desktop - Lance l'interface desktop 
+echo cargo make cli     - Lance l'interface CLI (dev mode)
+echo cargo make cli-prod - Build l'app en interface cli
 '''
