--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.41", features = ["derive"] }
-core = { path = "../cortex" }
+core = { path = "../core" }
