--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2024"
 
 [dependencies]
 dioxus = { version = "0.6.0", features = [] }
-core = { path = "../cortex" }
+core = { path = "../core" }
 
 [features]
 default = ["web"]
