--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,15 @@
-[package]
-name = "perso-ck3"
+[workspace]
+members = ["core", "cli", "gui"]
+resolver = "3"
+
+[workspace.package]
 version = "0.1.0"
+authors = ["Waylander <francois.caizes@laposte.net>"]
 edition = "2024"
 
-[dependencies]
-cli = { path = "cli", optional = true }
-#NB : pour le web, faut trouver un remplaçant à rand
-gui = { path = "gui", optional = true }
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen = "0.2.100"
-
-[features]
-cli = ["dep:cli"]
-web = ["gui/web"]
-desktop = ["gui/desktop"]
+[workspace.dependencies]
+#getrandom = { version = "0.3", features = ["wasm_js"] }
+#rand = { version = "0.9.2" }
 
 [profile]
 
