--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
 name = "core"
-version = "0.1.0"
-authors = ["Waylander <francois.caizes@laposte.net>"]
-edition = "2024"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 
 [dependencies]
-rand = "0.9.2"
+rand = { version = "0.9.2" }
 serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.3", features = ["wasm_js"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+getrandom = { version = "0.3" }
