--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,6 +8,7 @@ edition.workspace = true
 rand = { version = "0.9.2" }
 serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
+tracing = "0.1.41"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.3", features = ["wasm_js"] }
