--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 dioxus = { version = "0.6.0", features = ["fullstack"] }
 serde = {version = "1.0.219", features = ["derive"]}
 core = { path = "../core" }
+tracing = "0.1.41"
 
 [features]
 default = []
